src/style/darkMode.scss
.app.dark {
  color: var(--primary-light);
  background-color: var(--primary-dark);

  button {
    color: var(--primary-light);
  }

  .modal {
    &__content {
      background-color: var(--color-dark);
    }
  }

  .navbar {
    background-color: var(--color-dark);

    &__hamburger {
      background-color: var(--color-dark);

      span {
        background-color: var(--primary-light);
      }
    }
  }

  .sidebar {
    &__content {
      background-color: var(--color-dark);
    }

    &__menu {
      ul {
        :hover {
          background-color: var(--color-dark);
        }
      }
    }
  }

  .settings-timer {
    &__slider {
      background: var(--color-dark);
      border: 2px solid var(--primary-light);
    }

    &__slider::-webkit-slider-thumb {
      border: 1px solid var(--primary-light);
    }

    &__slider::-moz-range-thumb {
      border: 1px solid var(--primary-light);
    }
  }

  .timer {
    &__time {
      background-color: var(--color-dark);
      border: 2px solid var(--primary-light);
      box-shadow: none;
    }

    &__buttons {
      /* stylelint-disable-next-line no-descending-specificity */
      :hover {
        box-shadow: none;
      }
    }

    &__btn {
      &-main {
        box-shadow: none;
      }
    }
  }

  .authentication {
    .form {
      background-color: var(--color-dark);
    }
  }

  .lessons {
    color: var(--primary-dark);
    background-color: var(--primary-dark);
  }

  .profile {
    &__load::before {
      color: var(--primary-light);
    }

    &__load:hover::before {
      color: var(--primary);
    }

    &__load:disabled::before {
      color: var(--color-grey-dark);
    }
  }

  .single-lesson {
    color: var(--primary-dark);
    background-color: var(--primary-dark);
  }

  .dark .btn {
    border: 1px solid var(--primary-light);

    &-dark {
      background-color: var(--color-dark);
    }
  }
}

